--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 轩辕碎
+title: 一条普朗克长度的鱼
 subtitle: 若教眼底无离恨，不信人间有白头
 description: Miracle
 author: 陈攀博
