--- a/themes/cyanstyle/_config.yml
+++ b/themes/cyanstyle/_config.yml
@@ -5,11 +5,11 @@ menu:
   About: /about
 
 # Content
-excerpt_link: More
-prev: Prev
-next: Next
-reply: Reply
-share: Share
+excerpt_link: 查看更多
+prev: 上一页
+next: 下一页
+reply: 回复
+share: 分享
 fancybox: true
 
 # Sidebar
